<resources>
    <string name="app_name">Fintech</string>
    <string name="textView_title">Notes on expenses</string>
    <string name="textView_buttonAddFintech">Add a purchase</string>
    <string name="textView_add">Add</string>

    <string name="hint_login">Enter a login</string>
    <string name="hint_pass">Enter a password</string>
    <string name="title_sign_in">Sign in</string>

    <string name="button_authentification">Authentification</string>
    <string name="button_register">Register an account</string>
    <string name="hint_sum">Enter the amount</string>
    <string name="hint_comment">Enter a comment</string>
    <string name="button_sign_in_with_account">Log in from an existing account</string>
    <string name="text_register">Register</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="text_name">Name:</string>
    <string name="text_date">Date:</string>
    <string name="text_sum">Amount:</string>

    <string-array name="spinnerDate">
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
        <item> 6 </item>
        <item> 7 </item>
        <item> 8 </item>
        <item> 9 </item>
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>
        <item> 13 </item>
        <item> 14 </item>
        <item> 15 </item>
        <item> 16 </item>
        <item> 17 </item>
        <item> 18 </item>
        <item> 19 </item>
        <item> 20 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
        <item> 24 </item>
        <item> 25 </item>
        <item> 26 </item>
        <item> 27 </item>
        <item> 28 </item>
        <item> 29 </item>
        <item> 30 </item>
        <item> 31 </item>
    </string-array>

    <string-array name="spinnerCategory">
        <item>Home</item>
        <item>Health</item>
        <item>Personal expenses</item>
        <item>Clothes</item>
        <item>Food</item>
        <item>Gifts and souvenirs</item>
        <item>Technic</item>
        <item>Services</item>
    </string-array>
</resources>